overflow bug fixed

--- a/assent/css/co-cur.css
+++ b/assent/css/co-cur.css
@@ -45,7 +45,7 @@
   } 
   
   .agileinfo-inner h2 {
-    font-size: 3em;
+    font-size: 2em;
     font-weight: 700;
     text-transform: capitalize;
     padding: 10vw 0 5vw;
